--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+	<meta name="google-site-verification" content="OKraHnVYryu1DQxixd8_p5R5VMPF0MeVvV2PNiRgvqs" />
         <title>Gui Caumo</title>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
